# uidgen

./: .gitignore  LICENSE  README.md  pyproject.toml
uidgen/: __init__.py  __main__.py  data.py
